Change position from absolute to relative

--- a/template.html
+++ b/template.html
@@ -42,8 +42,8 @@
             height: 1px;
             background: rgb(0, 0, 0);
             opacity: 1;
-            position: absolute;
-            top: 63px;
+            position: relative;
+            top: -8px;
             left: 0px;
             overflow: hidden;
         }
@@ -53,8 +53,8 @@
             height: 1px;
             background: rgb(0, 0, 0);
             opacity: 1;
-            position: absolute;
-            top: 127px;
+            position: relative;
+            top: -8px;
             left: 0px;
             overflow: hidden;
         }
