Update date handlebars

--- a/template_invoice.html
+++ b/template_invoice.html
@@ -1008,7 +1008,7 @@
             Cuffley,
             EN6 4RY</span>
         </div>
-        <div class="v1_907"><span class="v1_908">INFO:</span><span class="v1_909">Ref: {{orderId}}</span><span class="v1_911">Amount: {{total}}</span><span class="v1_912">Payment Date: {{p_date}}</span><span class="v1_912_1">Collection Date: {{c_date}}</span><span class="v1_912_2">VAT Number: 327650107</span></div>
+        <div class="v1_907"><span class="v1_908">INFO:</span><span class="v1_909">Ref: {{orderId}}</span><span class="v1_911">Amount: {{total}}</span><span class="v1_912">Payment Date: {{pDate}}</span><span class="v1_912_1">Collection Date: {{cDate}}</span><span class="v1_912_2">VAT Number: 327650107</span></div>
         <div class="v1_913">
             <div class="v1_914">
                 <div class="v1_915"><img src="https://dl.airtable.com/.attachmentThumbnails/39ea13f4e88186b8b5dd4c01aded0234/d7e8bc31" width=50px></div>
