--- a/template_job_card_images.html
+++ b/template_job_card_images.html
@@ -995,9 +995,8 @@
         width: 95%;
         height: 85%;
         position: fixed;
-        top: 45%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 20px;
+        left: 10px;
       }
 
       table,
