--- a/template_job_card_images.html
+++ b/template_job_card_images.html
@@ -1017,6 +1017,7 @@
         width: 100%;
         font-family: Poppins;
         font-size: 12px;
+        margin-left: 10px;
       }
 
       img[src=""] {
@@ -1039,7 +1040,7 @@
           <table class="images_table">
             <tbody>
               <tr style="height: 3%; text-align: left;">
-                <th colspan="3" style="padding: 15px;">{{text}} IMAGES BEFORE</th>
+                <th colspan="3">{{text}} IMAGES BEFORE</th>
               </tr>
               <tr>
                 {{#each imagesBefore}}
@@ -1047,7 +1048,7 @@
                 {{/each}}
               </tr>
               <tr style="height: 3%; text-align: left;">
-                <th colspan="3" style="padding: 15px;">{{text}} IMAGES AFTER</th>
+                <th colspan="3">{{text}} IMAGES AFTER</th>
               </tr>
               <tr">
                 {{#each imagesAfter}}
