added `padding-bottom` to `td`

--- a/template_job_card_images.html
+++ b/template_job_card_images.html
@@ -1044,7 +1044,7 @@
               </tr>
               <tr>
                 {{#each imagesBefore}}
-                  <td><img src="{{this}}"></td>
+                  <td><img style="padding-bottom: 15px;" src="{{this}}"></td>
                 {{/each}}
               </tr>
               <tr style="height: 3%; text-align: left;">
@@ -1052,7 +1052,7 @@
               </tr>
               <tr">
                 {{#each imagesAfter}}
-                  <td><img src="{{this}}"></td>
+                  <td><img style="padding-bottom: 15px;" src="{{this}}"></td>
                 {{/each}}
               </tr>
             </tbody>
