changed `Job Type` to `Service`

--- a/template_job_card.html
+++ b/template_job_card.html
@@ -24,7 +24,7 @@
             <div class="v1_901">
                 {{customerName}},
             </div>
-            <div class="v1_902">Job Type: {{jobType}}<br>Address: {{address}}</div>
+            <div class="v1_902">Service: {{service}}<br>Address: {{address}}</div>
         </div>
 
 				<div class="v1_899_2">
