fixed missing handlebars

--- a/template_customer_jobcard.html
+++ b/template_customer_jobcard.html
@@ -65,18 +65,18 @@
 			<table class="images_table">
 				<tbody>
 					<tr style="height: 3%; text-align: left;">
-						<th colspan="3">{{text}} IMAGES BEFORE</th>
+						<th colspan="3">SITE IMAGES BEFORE</th>
 					</tr>
 					<tr>
-						{{#each imagesBefore}}
+						{{#each siteImagesBefore}}
 							<td><img style="padding-bottom: 15px;" src="{{this}}"></td>
 						{{/each}}
 					</tr>
 					<tr style="height: 3%; text-align: left;">
-						<th colspan="3">{{text}} IMAGES AFTER</th>
+						<th colspan="3">SITE IMAGES AFTER</th>
 					</tr>
 					<tr">
-						{{#each imagesAfter}}
+						{{#each siteImagesAfter}}
 							<td><img style="padding-bottom: 15px;" src="{{this}}"></td>
 						{{/each}}
 					</tr>
