right aligned info elements

--- a/template_invoice.html
+++ b/template_invoice.html
@@ -91,16 +91,16 @@
       }
 
       .v1_895 {
-        width: auto;
+        width: 200px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 40px;
-        left: 390px;
+        left: 350px;
         font-family: Poppins;
         font-weight: 900;
         font-size: 30px;
         opacity: 1;
-        text-align: left;
+        text-align: right;
       }
 
       .v1_896 {
@@ -247,19 +247,16 @@
       .v1_907 {
         width: 200px;
         height: 105px;
-        background: url("../images/v1_907.png");
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
         opacity: 1;
         position: absolute;
         top: 115px;
-        left: 395px;
+        left: 350px;
         word-break: keep-all;
+        text-align: right;
       }
 
       .v1_908 {
-        width: 36px;
+        width: 200px;
         color: rgba(111, 111, 132, 1);
         position: absolute;
         top: 0px;
@@ -268,11 +265,11 @@
         font-weight: Regular;
         font-size: 14px;
         opacity: 1;
-        text-align: left;
+        text-align: inherit;
       }
 
       .v1_909 {
-        width: auto;
+        width: 200px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 44px;
@@ -281,20 +278,18 @@
         font-weight: Regular;
         font-size: 12px;
         opacity: 1;
-        text-align: left;
+        text-align: inherit;
       }
 
       .v1_910 {
-        width: 122px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 88px;
-        left: 0px;
         text-align: left;
       }
 
       .v1_911 {
-        width: 129px;
+        width: 200px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 22px;
@@ -303,11 +298,11 @@
         font-weight: 600;
         font-size: 14px;
         opacity: 1;
-        text-align: left;
+        text-align: inherit;
       }
 
       .v1_912 {
-        width: auto;
+        width: 200px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 66px;
@@ -316,11 +311,11 @@
         font-weight: Regular;
         font-size: 12px;
         opacity: 1;
-        text-align: left;
+        text-align: inherit;
       }
 
       .v1_912_1 {
-        width: auto;
+        width: 200px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 88px;
@@ -329,11 +324,11 @@
         font-weight: Regular;
         font-size: 12px;
         opacity: 1;
-        text-align: left;
+        text-align: inherit;
       }
 
       .v1_912_2 {
-        width: auto;
+        width: 200px;
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 108px;
@@ -342,7 +337,7 @@
         font-weight: Regular;
         font-size: 12px;
         opacity: 1;
-        text-align: left;
+        text-align: inherit;
       }
 
       .v1_913 {
