updated date handlebar

--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -45,7 +45,7 @@
       .sep_1 {
         width: 526px;
         height: 1px;
-        background: rgb(0, 0, 0);
+        color: black;
         opacity: 1;
         position: relative;
         top: -8px;
@@ -56,7 +56,7 @@
       .sep_2 {
         width: 526px;
         height: 1px;
-        background: rgb(0, 0, 0);
+        background: grey;
         opacity: 1;
         position: relative;
         top: -8px;
@@ -1163,7 +1163,7 @@
           width="250px"
       /></span>
       <span class="v1_895">Ref: {{orderId}}</span>
-      <span class="v1_895_2">Date: {{orderId}}</span>
+      <span class="v1_895_2">Date: {{date}}</span>
       <span class="v1_909_1">DUTY OF CARE WASTE TRANSFER NOTE: LITTA APP LTD</span>
       <div class="v1_896">
         <span class="v1_898"></span>
