change `waistAmount` to `wasteAmount` :/

--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1115,7 +1115,7 @@
 
         <h4>SECTION A – DESCRIPTION OF WASTE</h4>
           A1.  Description of Waste: {{description}}<br>
-          A2. Waste Amount: {{waistAmount}}<br>
+          A2. Waste Amount: {{wasteAmount}}<br>
 
 
           <h4>SECTION B – CURRENT HOLDER OF THE WASTE - TRANSFEROR</h4>
