update format and added new handlebars

--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1018,9 +1018,9 @@
 
       .main {
         width: 93%;
-        height: 47%;
+        height: 52%;
         font-family: Poppins;
-        font-size: 11px;
+        font-size: 10.7px;
         font-weight: 300;
         background: white;
         opacity: 1;
@@ -1062,10 +1062,10 @@
         height: 4%;
         font-family: Poppins;
         color: grey;
-        font-size: 7px;
+        font-size: 6px;
         opacity: 1;
         position: relative;
-        top: -35px;
+        top: -74px;
         left: 21px;
         overflow: hidden;
         padding-left: 10px;
@@ -1116,11 +1116,13 @@
         <h4>SECTION A – DESCRIPTION OF WASTE</h4>
           A1.  Description of Waste: {{description}}<br>
           A2. Waste Amount: {{wasteAmount}}<br>
+          {{materialsCollected}}<br>
 
 
           <h4>SECTION B – CURRENT HOLDER OF THE WASTE - TRANSFEROR</h4>
           By signing in Section E below I confirm that I have fulfilled my duty to apply the waste hierarchy as required by Regulation 12 of the Waste (England and Wales) Regulations 2011:<br>
           Name and Address: {{name}}, {{address}}<br>
+          {{sicCodes}}<br>
 
 
           <h4>SECTION C - PERSON COLLECTING THE WASTE - TRANSFEREE</h4>
