--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -100,7 +100,7 @@
         top: 40px;
         left: 300px;
         font-family: Poppins;
-        font-weight: 900;
+        font-weight: 300;
         font-size: 16px;
         opacity: 1;
         text-align: right;
@@ -113,7 +113,7 @@
         top: 70px;
         left: 300px;
         font-family: Poppins;
-        font-weight: 900;
+        font-weight: 300;
         font-size: 16px;
         opacity: 1;
         text-align: right;
@@ -1138,7 +1138,6 @@
           Broker: LITTA APP LTD<br>
           Broker Address: Sopers House, Sopers Road, Cuffley, EN6 4RY<br>
           Waste Registration Number: CBDU375738<br>
-          <hr>
 
       </div>
       <div class="lower_left">
@@ -1164,8 +1163,8 @@
           src="https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FLITTA_Horizontal_Gloss_Logo.jpg?alt=media&token=4a540f9d-943e-408e-afe1-fa0f33ca0a73"
           width="250px"
       /></span>
-      <span class="v1_895">Ref: {{orderId}}</span>
-      <span class="v1_895_2">Date: {{date}}</span>
+      <span class="v1_895"><b>Ref: </b>{{orderId}}</span>
+      <span class="v1_895_2"><b>Date: </b>{{date}}</span>
       <span class="v1_909_1">DUTY OF CARE WASTE TRANSFER NOTE: LITTA APP LTD</span>
       <div class="v1_896">
         <span class="v1_898"></span>
