updated to accomodate 4 images each

--- a/template_customer_jobcard.html
+++ b/template_customer_jobcard.html
@@ -13,22 +13,25 @@
         left: 0;
         right: 0;
         height: 56%;
-        width: 94%;
+        width: 85%;
         font-family: Poppins;
         font-size: 12px;
-        margin-left: 20px;
+        margin-left: 10px;
       }
 
 			table,
       tr,
       th,
       td {
-        
         border-collapse: collapse;
       }
 
+      td {
+        padding: 10px;
+      }
+
 			td img {
-        width: 160px;
+        width: 120px;
         height: auto;
         display: block;
       }
