--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1169,6 +1169,7 @@
       <div class="v1_896">
         <span class="v1_898"></span>
       </div>
+      <div class="v1_950"></div>
       <div class="v1_913">
         <div class="v1_914">
           <div class="v1_915">
