--- a/template_quote.html
+++ b/template_quote.html
@@ -906,11 +906,33 @@
         padding-bottom: 10px;
       }
 
+      .products th + th {
+        color: grey;
+        text-align: right;
+        padding-bottom: 10px;
+        padding-right: 376px;
+      }
+
       .products th,
       td {
         word-wrap: break-word;
-        min-width: 460px;
-        max-width: 460px;
+        min-width: 450px;
+        max-width: 450px;
+      }
+
+      .products td + td {
+        text-align: right;
+        padding-right: 376px;
+      }
+
+      .subtotals td + td {
+        text-align: right;
+        padding-right: 376px;
+      }
+
+      .totals td + td {
+        text-align: right;
+        padding-right: 376px;
       }
 
       .subtotals {
