--- a/template_invoice.html
+++ b/template_invoice.html
@@ -95,7 +95,7 @@
         color: rgba(34, 34, 52, 1);
         position: absolute;
         top: 40px;
-        left: 350px;
+        left: 360px;
         font-family: Poppins;
         font-weight: 900;
         font-size: 30px;
@@ -250,7 +250,7 @@
         opacity: 1;
         position: absolute;
         top: 115px;
-        left: 350px;
+        left: 360px;
         word-break: keep-all;
         text-align: right;
       }
@@ -932,11 +932,33 @@
         padding-bottom: 10px;
       }
 
+      .products th + th {
+        color: grey;
+        text-align: right;
+        padding-bottom: 10px;
+        padding-right: 376px;
+      }
+
       .products th,
       td {
         word-wrap: break-word;
-        min-width: 460px;
-        max-width: 460px;
+        min-width: 450px;
+        max-width: 450px;
+      }
+
+      .products td + td {
+        text-align: right;
+        padding-right: 376px;
+      }
+
+      .subtotals td + td {
+        text-align: right;
+        padding-right: 376px;
+      }
+
+      .totals td + td {
+        text-align: right;
+        padding-right: 376px;
       }
 
       .subtotals {
