[📄] added SIC code

--- a/template_job_card.html
+++ b/template_job_card.html
@@ -32,7 +32,7 @@
 					<div class="v1_901_2">
 							Collection Date: {{cDate}}
 					</div>
-					<div class="v1_902_2">Completion Time: {{cTime}}<br>Estimated Waste: {{estWaste}}³</div>
+					<div class="v1_902_2">Completion Time: {{cTime}}<br>Estimated Waste: {{estWaste}}³<br>SIC Code: {{sicCode}}</div>
 			</div>
 
 			<div class="v1_899_3">
