--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1116,13 +1116,13 @@
         <h4>SECTION A – DESCRIPTION OF WASTE</h4>
           A1.  Description of Waste: {{description}}<br>
           A2. Waste Amount: {{wasteAmount}}<br>
-          {{materialsCollected}}<br>
+          {{{materialsCollected}}}
 
 
           <h4>SECTION B – CURRENT HOLDER OF THE WASTE - TRANSFEROR</h4>
           By signing in Section E below I confirm that I have fulfilled my duty to apply the waste hierarchy as required by Regulation 12 of the Waste (England and Wales) Regulations 2011:<br>
           Name and Address: {{name}}, {{address}}<br>
-          {{sicCodes}}<br>
+          {{{sicCodes}}}
 
 
           <h4>SECTION C - PERSON COLLECTING THE WASTE - TRANSFEREE</h4>
