[📄] added section for customer notes

--- a/template_quote.html
+++ b/template_quote.html
@@ -106,7 +106,6 @@
       .v1_896 {
         width: 57px;
         height: 30px;
-        background: url("../images/v1_896.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -194,7 +193,6 @@
       .v1_903 {
         width: 121px;
         height: 104px;
-        background: url("../images/v1_903.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -317,7 +315,6 @@
       .v1_913 {
         width: 535px;
         height: 50px;
-        background: url("../images/v1_913.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -331,7 +328,6 @@
       .v1_914 {
         width: 50px;
         height: 50px;
-        background: url("../images/v1_914.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -444,7 +440,6 @@
       .v1_923 {
         width: 389px;
         height: 85px;
-        background: url("../images/v1_923.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -458,14 +453,36 @@
       .v2_001 {
         width: 580px;
         height: auto;
-        background: url("../images/v1_923.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
         opacity: 1;
         position: absolute;
-        top: 300px;
+        top: 250px;
         left: 30px;
+        overflow: hidden;
+      }
+
+      .v2_001_1 {
+        color: grey;
+        position: relative;
+        width: 200px;
+        min-height: 100px;
+        height: auto;
+        font-family: Poppins;
+        font-size: 9px;
+        top: 15px;
+        padding: 3px;
+      }
+
+      .sep_3 {
+        width: 215px;
+        height: 1px;
+        background: grey;
+        opacity: 1;
+        position: relative;
+        top: -8px;
+        left: -10px;
         overflow: hidden;
       }
 
@@ -567,7 +584,6 @@
 
       .v1_928 {
         width: 73px;
-        color: url("../images/v1_928.png");
         position: absolute;
         top: 66px;
         left: 0px;
@@ -772,7 +788,6 @@
       .v1_944 {
         width: 433px;
         height: 70px;
-        background: url("../images/v1_944.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -797,7 +812,6 @@
       .v1_946 {
         width: 393px;
         height: 35px;
-        background: url("../images/v1_946.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -823,7 +837,6 @@
 
       .v1_948 {
         width: 166px;
-        color: url("../images/v1_948.png");
         position: absolute;
         top: 0px;
         left: 227px;
@@ -833,7 +846,6 @@
 
       .v1_949 {
         width: 114px;
-        color: url("../images/v1_949.png");
         position: absolute;
         top: 20px;
         left: 279px;
@@ -855,7 +867,6 @@
       .v1_951 {
         width: 192px;
         height: 39px;
-        background: url("../images/v1_951.png");
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
@@ -1081,6 +1092,7 @@
             </tr>
           </tbody>
         </table>
+        <div class="v2_001_1">{{{notes}}}</div>
       </div>
       <div class="v1_944">
         <div class="v1_945"></div>
