--- a/template_quote.html
+++ b/template_quote.html
@@ -464,10 +464,11 @@
       }
 
       .v2_001_1 {
-        color: grey;
+        color: black;
+        background-color: #06cccc;
         position: relative;
-        width: 200px;
-        min-height: 100px;
+        width: 526px;
+        min-height: 50px;
         height: auto;
         font-family: Poppins;
         font-size: 10px;
@@ -962,6 +963,10 @@
       a {
         color: grey;
         text-decoration: none;
+      }
+
+      .notes {
+        color: grey;
       }
 
       hr {
