[📄] swapped signature position, changed phone number

--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1065,7 +1065,7 @@
         font-size: 6px;
         opacity: 1;
         position: relative;
-        top: -74px;
+        top: -61px;
         left: 21px;
         overflow: hidden;
         padding-left: 10px;
@@ -1141,13 +1141,6 @@
 
       </div>
       <div class="lower_left">
-        <h4>TRANSFEROR'S SIGNATURE</h4>
-        <img src="{{trSig}}"
-        width="150px"
-        height="100px">
-        <h5>SIGNED FOR BY: {{name}}</h5>
-      </div>
-      <div class="lower_right">
         <h4>TRANSFEREE'S SIGNATURE</h4>
         <img src="{{bSig}}"
         width="150px"
@@ -1155,8 +1148,15 @@
         <h5>SIGNED FOR BY: {{bName}}</h5>
         <h5>ON BEHALF OF: {{bCompany}}</h5>
       </div>
+      <div class="lower_right">
+        <h4>TRANSFEROR'S SIGNATURE</h4>
+        <img src="{{trSig}}"
+        width="150px"
+        height="100px">
+        <h5>SIGNED FOR BY: {{name}}</h5>
+      </div>
       <div class="lower">
-        <p><b>NOTE: This document is valid for one year from the date and time of collection.<br>Please keep this document for your records for a minimum of two years.</p></b>
+        <p><b>NOTE: This document is valid for one year from the date and time of collection. Please keep this document for your records for a minimum of two years.</p></b>
       </div>
       <span class="v2_002"
         ><img
@@ -1184,7 +1184,7 @@
           No: CBDU375738
         </div>
         <span class="v1_918"><a href="http://litta.co">litta.co</a></span
-        ><span class="v1_919"><a href="tel:+08000096140">0800 0096 140</a></span
+        ><span class="v1_919"><a href="tel:+08000119492">0800 011 9492</a></span
         ><span class="v1_920"
           ><a href="mailto:hi@litta.co">hi@litta.co</a></span
         >
