[📄] changed to use index from payload

--- a/template_jobs_summary_page.html
+++ b/template_jobs_summary_page.html
@@ -97,7 +97,7 @@
         </tr>
         {{#each summary}}
         <tr>
-          <td>{{@index}}</td>
+          <td>{{this.index}}</td>
           <td>{{this.reference}}</td>
           <td>{{this.time_slot}}</td>
           <td>{{this.address}}</td>
