--- a/template_jobs_summary_page.html
+++ b/template_jobs_summary_page.html
@@ -109,7 +109,7 @@
         <a
           type="button"
           class="btn btn-light"
-          href="https://jobs.litta.co/carrier/accept/{{id}}"
+          href="https://jobs.litta.co/carrier/{{id}}/accept"
         >
           Acknowledge Jobs
         </a>
