--- a/template_jobs_summary_page.html
+++ b/template_jobs_summary_page.html
@@ -9,6 +9,10 @@
       crossorigin="anonymous"
     />
     <style>
+      body {
+        position: relative;
+      }
+
       img {
         padding-left: 10px;
       }
@@ -62,6 +66,11 @@
         padding-bottom: 10px;
       }
 
+      h3 {
+        text-align: center;
+        padding-bottom: 10px;
+      }
+
       .btn {
         height: 100%;
         background-color: #06cccc;
@@ -69,8 +78,15 @@
         font-size: 20px;
       }
 
-      nav h2 {
-        padding-right: 10px;
+      nav h4 {
+        padding-right: 30px;
+      }
+
+      footer {
+        font-size: x-small;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
       }
     </style>
   </head>
@@ -83,10 +99,11 @@
           alt="LITTA Logo"
         />
       </a>
-      <h2>{{date}}</h2>
+      <h4>{{time_sent}}</h4>
     </nav>
     <div class="container-fluid">
-      <h2>Daily Job Summary ({{title}})</h2>
+      <h2>Daily Job Summary for ({{date}})</h2>
+      <h3>{{carrier_name}}</h3>
       <table>
         <tr>
           <th class="count">#</th>
@@ -115,5 +132,12 @@
         </a>
       </div>
     </div>
+    <footer class="bg-light text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3"">
+        © 2022 Copyright LITTA APP Ltd
+      </div>
+      <!-- Copyright -->
+    </footer>
   </body>
 </html>
