--- a/template_jobs_summary_page.html
+++ b/template_jobs_summary_page.html
@@ -99,10 +99,10 @@
           alt="LITTA Logo"
         />
       </a>
-      <h4>{{time_sent}}</h4>
+      <h4>Time Sent: {{time_sent}}</h4>
     </nav>
     <div class="container-fluid">
-      <h2>Daily Job Summary for ({{date}})</h2>
+      <h2>Daily Job Summary for {{date}}</h2>
       <h3>{{carrier_name}}</h3>
       <table>
         <tr>
