--- a/template_jobs_summary_page.html
+++ b/template_jobs_summary_page.html
@@ -84,7 +84,7 @@
 
       footer {
         font-size: x-small;
-        position: fixed;
+        position: relative;
         bottom: 0;
         width: 100%;
       }
