[📄]] testing local font

--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600"
-      rel="stylesheet"
-    />
     <style>
+      @font-face {
+        font-family: "Poppins";
+        src: url("./fonts/Poppins-Regular.ttf");
+      }
       * {
         box-sizing: border-box;
+        font-family: "Poppins";
       }
 
       .page {
