[📄]] testing local font

--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -4,8 +4,9 @@
     <style>
       @font-face {
         font-family: "Poppins";
-        src: url("./fonts/Poppins-Regular.ttf");
+        src: url("data:font/truetype;charset=utf-8;base64,{{this.fontRoboto}}");
       }
+
       * {
         box-sizing: border-box;
         font-family: "Poppins";
