[📄]] more font testing

--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -4,7 +4,7 @@
     <style>
       @font-face {
         font-family: "Poppins";
-        src: url("data:font/truetype;charset=utf-8;base64,{{this.fontRoboto}}");
+        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Regular.ttf") format("truetype");
       }
 
       * {
