[📄]] added different font weights to CSS

--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -5,6 +5,25 @@
       @font-face {
         font-family: "Poppins";
         src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Regular.ttf") format("truetype");
+        font-weight: normal;
+      }
+
+      @font-face {
+        font-family: "Poppins";
+        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-SemiBold.ttf") format("truetype");
+        font-weight: 400; 
+      }
+
+      @font-face {
+        font-family: "Poppins";
+        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Bold.ttf") format("truetype");
+        font-weight: 600;
+      }
+
+      @font-face {
+        font-family: "Poppins";
+        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-ExtraBold.ttf") format("truetype");
+        font-weight: 900;
       }
 
       * {
