--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -10,6 +10,12 @@
 
       @font-face {
         font-family: "Poppins";
+        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Medium.ttf") format("truetype");
+        font-weight: 500; 
+      }
+
+      @font-face {
+        font-family: "Poppins";
         src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-SemiBold.ttf") format("truetype");
         font-weight: 600; 
       }
