--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -3,12 +3,13 @@
   <head>
     <style>
       @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Regular.ttf") format("truetype");
-        font-weight: normal;
+          font-family: "Poppins";
+          font-style: normal;
+          font-weight: 400;
+          src: local("Poppins"), local("Poppins-Regular"), url(./fonts/Poppins-Medium.ttf) format("truetype");
       }
 
-      @font-face {
+      /* @font-face {
         font-family: "Poppins";
         src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Medium.ttf") format("truetype");
         font-weight: 500; 
@@ -24,7 +25,7 @@
         font-family: "Poppins";
         src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Bold.ttf") format("truetype");
         font-weight: 900;
-      }
+      } */
 
       * {
         box-sizing: border-box;
