--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -6,7 +6,7 @@
           font-family: "Poppins";
           font-style: normal;
           font-weight: 400;
-          src: local("Poppins"), local("Poppins-Regular"), url("./fonts/Poppins-Medium.ttf") format("truetype");
+          src: local("Poppins"), local("Poppins-Regular"), url("/fonts/Poppins-Medium.ttf") format("truetype");
       }
 
       /* @font-face {
