--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -6,7 +6,7 @@
           font-family: "Poppins";
           font-style: normal;
           font-weight: 400;
-          src: url("data:font/truetype;charset=utf-8;base64,{{this.fontPoppins}}") format("truetype");
+          src: url("data:font/truetype;charset=utf-8;base64,{{font}}") format("truetype");
       }
 
       /* @font-face {
