return to original font link

--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -1,34 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600"
+      rel="stylesheet"
+    />
     <style>
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Regular.ttf")
-          format("truetype");
-        font-weight: normal;
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Medium.ttf")
-          format("truetype");
-        font-weight: 500;
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-SemiBold.ttf")
-          format("truetype");
-        font-weight: 600;
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Bold.ttf")
-          format("truetype");
-        font-weight: 900;
-      }
 
       * {
         box-sizing: border-box;
