--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600"
-      rel="stylesheet"
-    />
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
       * {
         box-sizing: border-box;
