testing puppeteer not printing correctly

--- a/template_tipping_ticket.html
+++ b/template_tipping_ticket.html
@@ -4,6 +4,10 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
+      html {
+        -webkit-print-color-adjust: exact;
+      }
+
       * {
         box-sizing: border-box;
         font-family: "Poppins";
