--- a/template_quote.html
+++ b/template_quote.html
@@ -2,32 +2,10 @@
 <html>
   <head>
     <style>
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Regular.ttf")
-          format("truetype");
-        font-weight: normal;
-      }
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Medium.ttf")
-          format("truetype");
-        font-weight: 500;
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-SemiBold.ttf")
-          format("truetype");
-        font-weight: 600;
-      }
-
-      @font-face {
-        font-family: "Poppins";
-        src: url("https://raw.githubusercontent.com/ak-tr/web/main/fonts/Poppins-Bold.ttf")
-          format("truetype");
-        font-weight: 900;
+      html {
+        -webkit-print-color-adjust: exact;
       }
 
       * {
