added `!important` as further testing

--- a/template_quote.html
+++ b/template_quote.html
@@ -4,10 +4,6 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
-      html {
-        -webkit-print-color-adjust: exact;
-      }
-
       * {
         box-sizing: border-box;
       }
@@ -44,7 +40,7 @@
       .sep_1 {
         width: 526px;
         height: 1px;
-        background: rgb(0, 0, 0);
+        background: rgb(0, 0, 0) !important;
         opacity: 1;
         position: relative;
         top: -8px;
@@ -55,7 +51,7 @@
       .sep_2 {
         width: 526px;
         height: 1px;
-        background: rgb(0, 0, 0);
+        background: rgb(0, 0, 0) !important;
         opacity: 1;
         position: relative;
         top: -8px;
@@ -84,7 +80,7 @@
       .v1_894 {
         width: 535px;
         height: 1px;
-        background: rgb(0, 0, 0);
+        background: rgb(0, 0, 0) !important;
         opacity: 1;
         position: absolute;
         top: 751px;
@@ -792,7 +788,7 @@
       .v1_945 {
         width: 433px;
         height: 70px;
-        background: rgba(244, 244, 249, 1);
+        background: rgba(244, 244, 249, 1) !important;
         opacity: 1;
         position: absolute;
         top: 0px;
@@ -973,7 +969,7 @@
 
       .book_now {
         position: absolute;
-        background-color: #06cccc;
+        background-color: #06cccc !important;
         font-family: Poppins;
         height: 53%;
         top: 16px;
