--- a/template_quote_images.html
+++ b/template_quote_images.html
@@ -1073,10 +1073,11 @@
       .parent {
         display: grid;
         height: 65vh;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        grid-template-rows: repeat(2, minmax(0, 1fr));
+        grid-template-columns: repeat(2, 280px);
+        grid-template-rows: repeat(2, 330px);
         grid-column-gap: 10px;
         grid-row-gap: 10px;
+        padding-left: 10px;
       }
 
       .parent img {
