--- a/template_quote_images.html
+++ b/template_quote_images.html
@@ -1068,16 +1068,17 @@
       .main p {
         font-family: Poppins;
         margin-bottom: 10px;
+        margin-left: 10px;
       }
 
       .parent {
         display: grid;
         height: 65vh;
-        grid-template-columns: repeat(2, 280px);
+        grid-template-columns: repeat(2, 270px);
         grid-template-rows: repeat(2, 330px);
         grid-column-gap: 10px;
         grid-row-gap: 10px;
-        padding-left: 10px;
+        padding-left: 12px;
       }
 
       .parent img {
