--- a/template_quote_images.html
+++ b/template_quote_images.html
@@ -1118,7 +1118,7 @@
       <div class="v1_893 scaled">
         <div class="v1_894"></div>
         <div class="main">
-          <p>Pictures provided:</p>
+          <p>Quotation based on the following images:</p>
           <div class="parent">
             {{#with images}}
             <div class="div1"><img src="{{first}}" /></div>
