--- a/template_quote.html
+++ b/template_quote.html
@@ -470,7 +470,8 @@
         font-family: Poppins;
         font-size: 10px;
         top: 8px;
-        padding: 3px;
+        margin: 3px;
+        padding-bottom: 3px;
       }
 
       .v2_002 {
