--- a/template_job_card.html
+++ b/template_job_card.html
@@ -20,19 +20,11 @@
             <span class="v1_898"></span>
         </div>
         <div class="v1_899">
-            <div class="v1_900">CUSTOMER DETAILS:</div>
-            <div class="v1_901">
-                {{companyName}}
-            </div>
-            <div class="v1_902">Site Contact: {{siteContact}}<br>Service: {{service}}<br>Address: {{address}}<br>SIC Code: {{sicCode}}</div>
+            <div class="v1_902"><b>Client: </b>{{companyName}}<br><b>SIC Code: </b>{{sicCode}}<br><b>Service: </b>{{service}}<br><b>Address: </b>{{address}}</div>
         </div>
 
 				<div class="v1_899_2">
-					<div class="v1_900_2">INFO:</div>
-					<div class="v1_901_2">
-							Collection Date: {{cDate}}
-					</div>
-					<div class="v1_902_2">Completion Time: {{cTime}}</div>
+					<div class="v1_902_2"><b>Site Contact: </b>{{siteContact}}<br><b>Collection Date: </b>{{cDate}}<br><b>Completion Time: </b>{{cTime}}</div>
 			</div>
 
 			<div class="v1_899_3">
