--- a/template_invoice.html
+++ b/template_invoice.html
@@ -1054,7 +1054,7 @@
           <div></div>
           {{customerName}}
         </div>
-        <div class="v1_902">{{address}}</div>
+        <div class="v1_902">{{{address}}}</div>
       </div>
       <div class="v1_903">
         <span class="v1_904">FROM:</span
