added triple brace to `customerName`

--- a/template_invoice.html
+++ b/template_invoice.html
@@ -1052,7 +1052,7 @@
         <div class="v1_900">TO:</div>
         <div class="v1_901">
           <div></div>
-          {{customerName}}
+          {{{customerName}}}
         </div>
         <div class="v1_902">{{{address}}}</div>
       </div>
