--- a/template_invoice.html
+++ b/template_invoice.html
@@ -188,7 +188,7 @@
       }
 
       .v1_901 {
-        width: 96px;
+        width:176px;
         color: rgba(34, 34, 52, 1);
         position: relative;
         top: 0px;
@@ -199,6 +199,7 @@
         opacity: 1;
         text-align: left;
         display: inline-block;
+        overflow-wrap: break-word;
       }
 
       .v1_902 {
@@ -1051,7 +1052,6 @@
       <div class="v1_899">
         <div class="v1_900">TO:</div>
         <div class="v1_901">
-          <div></div>
           {{{customerName}}}
         </div>
         <div class="v1_902">{{{address}}}</div>
