added po number

--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -117,7 +117,7 @@
         width: 275px;
         color: black;
         position: absolute;
-        top: 40px;
+        top: 20px;
         left: 300px;
         font-family: Poppins;
         font-weight: 300;
@@ -130,7 +130,20 @@
         width: 275px;
         color: black;
         position: absolute;
-        top: 70px;
+        top: 47px;
+        left: 300px;
+        font-family: Poppins;
+        font-weight: 300;
+        font-size: 16px;
+        opacity: 1;
+        text-align: right;
+      }
+
+      .v1_895_3 {
+        width: 275px;
+        color: black;
+        position: absolute;
+        top: 72px;
         left: 300px;
         font-family: Poppins;
         font-weight: 300;
@@ -1183,8 +1196,9 @@
           src="https://firebasestorage.googleapis.com/v0/b/litta-technology.appspot.com/o/web_images%2FLITTA_Horizontal_Gloss_Logo.jpg?alt=media&token=4a540f9d-943e-408e-afe1-fa0f33ca0a73"
           width="250px"
       /></span>
-      <span class="v1_895"><b>Ref: </b>{{orderId}}</span>
-      <span class="v1_895_2"><b>Date: </b>{{date}}</span>
+      <span class="v1_895"><b>Date: </b>{{date}}</span>
+      <span class="v1_895_2"><b>Ref: </b>{{orderId}}</span>
+      <span class="v1_895_3"><b>PO: </b>{{poId}}</span>
       <span class="v1_909_1">DUTY OF CARE WASTE TRANSFER NOTE: LITTA APP LTD</span>
       <div class="v1_896">
         <span class="v1_898"></span>
