added if to poId

--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1198,7 +1198,7 @@
       /></span>
       <span class="v1_895"><b>Date: </b>{{date}}</span>
       <span class="v1_895_2"><b>Ref: </b>{{orderId}}</span>
-      <span class="v1_895_3"><b>PO: </b>{{poId}}</span>
+      {{#if poId}}<span class="v1_895_3"><b>PO: </b>{{poId}}</span>{{/if}}
       <span class="v1_909_1">DUTY OF CARE WASTE TRANSFER NOTE: LITTA APP LTD</span>
       <div class="v1_896">
         <span class="v1_898"></span>
