--- a/template_waste_transfer_note.html
+++ b/template_waste_transfer_note.html
@@ -1149,9 +1149,9 @@
         <h4>SECTION A – DESCRIPTION OF WASTE</h4>
           A1.  Description of Waste: {{description}}<br>
           A2. Waste Amount: {{wasteAmount}}<br>
-          {{{materialsCollected}}}<br>
+          {{{materialsCollected}}}
           {{#if wasteType}}
-          A3. Waste Type {{{wasteType}}}<br>
+          A3. Waste Type: {{{wasteType}}}<br>
           SIC Code: {{{clientSicCode}}}<br>
           LOW Code: {{{lowCode}}}
           {{/if}}
